Fix filters overflow on mobile

--- a/src/styles/appStyle.css
+++ b/src/styles/appStyle.css
@@ -82,5 +82,5 @@ input[type=number]:hover{
 }
 
 .swiper-slide img {
-  width: 500px;
+  width: 5`00px;
 }
